; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_parse_afmt.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_parse_afmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i32 }
%struct.bstr = type { i64 }

@M_OPT_MISSING_PARAM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"help\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"Available formats:\00", align 1
@AF_FORMAT_COUNT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [4 x i8] c" %s\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@M_OPT_EXIT = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [42 x i8] c"Option %.*s: unknown format name: '%.*s'\0A\00", align 1
@M_OPT_INVALID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_log*, i32*, i64, i64, i8*)* @parse_afmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_afmt(%struct.mp_log* %0, i32* %1, i64 %2, i64 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.bstr, align 8
  %8 = alloca %struct.bstr, align 8
  %9 = alloca %struct.mp_log*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = getelementptr inbounds %struct.bstr, %struct.bstr* %7, i32 0, i32 0
  store i64 %2, i64* %15, align 8
  %16 = getelementptr inbounds %struct.bstr, %struct.bstr* %8, i32 0, i32 0
  store i64 %3, i64* %16, align 8
  store %struct.mp_log* %0, %struct.mp_log** %9, align 8
  store i32* %1, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  %17 = getelementptr inbounds %struct.bstr, %struct.bstr* %8, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %5
  %21 = load i32, i32* @M_OPT_MISSING_PARAM, align 4
  store i32 %21, i32* %6, align 4
  br label %85

22:                                               ; preds = %5
  %23 = getelementptr inbounds %struct.bstr, %struct.bstr* %8, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @bstrcmp0(i64 %24, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %46, label %27

27:                                               ; preds = %22
  %28 = load %struct.mp_log*, %struct.mp_log** %9, align 8
  %29 = call i32 (%struct.mp_log*, i8*, ...) @mp_info(%struct.mp_log* %28, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %12, align 4
  br label %30

30:                                               ; preds = %39, %27
  %31 = load i32, i32* %12, align 4
  %32 = load i32, i32* @AF_FORMAT_COUNT, align 4
  %33 = icmp slt i32 %31, %32
  br i1 %33, label %34, label %42

34:                                               ; preds = %30
  %35 = load %struct.mp_log*, %struct.mp_log** %9, align 8
  %36 = load i32, i32* %12, align 4
  %37 = call i32 @af_fmt_to_str(i32 %36)
  %38 = call i32 (%struct.mp_log*, i8*, ...) @mp_info(%struct.mp_log* %35, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %37)
  br label %39

39:                                               ; preds = %34
  %40 = load i32, i32* %12, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %12, align 4
  br label %30

42:                                               ; preds = %30
  %43 = load %struct.mp_log*, %struct.mp_log** %9, align 8
  %44 = call i32 (%struct.mp_log*, i8*, ...) @mp_info(%struct.mp_log* %43, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %45 = load i32, i32* @M_OPT_EXIT, align 4
  store i32 %45, i32* %6, align 4
  br label %85

46:                                               ; preds = %22
  store i32 0, i32* %13, align 4
  store i32 1, i32* %14, align 4
  br label %47

47:                                               ; preds = %61, %46
  %48 = load i32, i32* %14, align 4
  %49 = load i32, i32* @AF_FORMAT_COUNT, align 4
  %50 = icmp slt i32 %48, %49
  br i1 %50, label %51, label %64

51:                                               ; preds = %47
  %52 = load i32, i32* %14, align 4
  %53 = call i32 @af_fmt_to_str(i32 %52)
  %54 = getelementptr inbounds %struct.bstr, %struct.bstr* %8, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = call i64 @bstr_equals0(i64 %55, i32 %53)
  %57 = icmp ne i64 %56, 0
  br i1 %57, label %58, label %60

58:                                               ; preds = %51
  %59 = load i32, i32* %14, align 4
  store i32 %59, i32* %13, align 4
  br label %60

60:                                               ; preds = %58, %51
  br label %61

61:                                               ; preds = %60
  %62 = load i32, i32* %14, align 4
  %63 = add nsw i32 %62, 1
  store i32 %63, i32* %14, align 4
  br label %47

64:                                               ; preds = %47
  %65 = load i32, i32* %13, align 4
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %77, label %67

67:                                               ; preds = %64
  %68 = load %struct.mp_log*, %struct.mp_log** %9, align 8
  %69 = getelementptr inbounds %struct.bstr, %struct.bstr* %7, i32 0, i32 0
  %70 = load i64, i64* %69, align 8
  %71 = call i32 @BSTR_P(i64 %70)
  %72 = getelementptr inbounds %struct.bstr, %struct.bstr* %8, i32 0, i32 0
  %73 = load i64, i64* %72, align 8
  %74 = call i32 @BSTR_P(i64 %73)
  %75 = call i32 @mp_err(%struct.mp_log* %68, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.4, i64 0, i64 0), i32 %71, i32 %74)
  %76 = load i32, i32* @M_OPT_INVALID, align 4
  store i32 %76, i32* %6, align 4
  br label %85

77:                                               ; preds = %64
  %78 = load i8*, i8** %11, align 8
  %79 = icmp ne i8* %78, null
  br i1 %79, label %80, label %84

80:                                               ; preds = %77
  %81 = load i32, i32* %13, align 4
  %82 = load i8*, i8** %11, align 8
  %83 = bitcast i8* %82 to i32*
  store i32 %81, i32* %83, align 4
  br label %84

84:                                               ; preds = %80, %77
  store i32 1, i32* %6, align 4
  br label %85

85:                                               ; preds = %84, %67, %42, %20
  %86 = load i32, i32* %6, align 4
  ret i32 %86
}

declare dso_local i32 @bstrcmp0(i64, i8*) #1

declare dso_local i32 @mp_info(%struct.mp_log*, i8*, ...) #1

declare dso_local i32 @af_fmt_to_str(i32) #1

declare dso_local i64 @bstr_equals0(i64, i32) #1

declare dso_local i32 @mp_err(%struct.mp_log*, i8*, i32, i32) #1

declare dso_local i32 @BSTR_P(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
